FIND_PACKAGE(LEMON REQUIRED)
INCLUDE_DIRECTORIES( ${LEMON_INCLUDE_DIRS} )
FIND_PACKAGE( Boost 1.40 COMPONENTS system REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

file(GLOB_RECURSE SOURCE_CODE *.cpp )
file(GLOB_RECURSE HEADERS_CODE *.hpp *.h )
add_library(base STATIC ${SOURCE_CODE} ${HEADERS_CODE})


TARGET_LINK_LIBRARIES(
        base
        ${LEMON_LIBRARIES}
)

install(TARGETS base DESTINATION lib)
install(FILES ${HEADERS} DESTINATION mrflow/)